Sugati/src/objects/Custom_Button_URL__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>ATOL__c</fullName>
        <label>ATOL</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acknowledgement_Email__c</fullName>
        <label>Acknowledgement Email</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Payments__c</fullName>
        <label>Client Payments</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cover_Image__c</fullName>
        <label>Cover Image</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Booking_Form__c</fullName>
        <label>External Booking Form</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Docs_Category__c</fullName>
        <label>Final Docs Category</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Docs_Setting__c</fullName>
        <label>Final Docs Setting</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Message__c</fullName>
        <label>Final Message</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Holiday_Enquiry__c</fullName>
        <label>Holiday Enquiry</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Holiday_Suggestion__c</fullName>
        <label>Holiday Suggestion</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Booking_Form__c</fullName>
        <label>Internal Booking Form</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Itinerary_Builder__c</fullName>
        <label>Itinerary Builder</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Itinerary_Category__c</fullName>
        <label>Itinerary Category</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Itinerary_Pdf__c</fullName>
        <label>Itinerary Pdf</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Itinerary_Settings__c</fullName>
        <label>Itinerary Settings</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Itinerary_Web__c</fullName>
        <label>Itinerary Web</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manage_Tasks__c</fullName>
        <label>Manage Tasks</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Questionnaire__c</fullName>
        <label>Questionnaire</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Email__c</fullName>
        <label>Send Email</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Payments__c</fullName>
        <label>Supplier Payments</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Custom Button URL</label>
</CustomObject>